# best_cfb_divisions

./: .gitignore  Cargo.toml
benches/: bench.rs
src/: combo.rs  distance_lookup_table.rs  division_distance.rs  division_pair.rs  division_pairs.rs  lib.rs  main.rs  script.rs  types.rs
src/division/: algorithm.rs  distance.rs  mod.rs  pair.rs
src/pod/: algorithm.rs  combo.rs  distance.rs  mod.rs  quadruple.rs
