[package]
name = "best_cfb_divisions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.85"
rayon = "1.5.3"

[profile.release]
debug = true
lto = true
panic = "abort"
